small fixes with review form and sorting

--- a/src/components/ReviewForm/ReviewForm.module.css
+++ b/src/components/ReviewForm/ReviewForm.module.css
@@ -43,6 +43,7 @@
   appearance: none; /* Removes default browser styling */
   -webkit-appearance: none;
   -moz-appearance: none;
+  font-family: inherit;
 }
 
 .select {
