--- a/src/components/EditReviewForm/EditReviewForm.module.css
+++ b/src/components/EditReviewForm/EditReviewForm.module.css
@@ -29,6 +29,7 @@
   background-color: #2b2a28;
   color: #fff;
   font-size: 16px;
+  font-family: inherit; /* This ensures all inputs use the same font */
 }
 
 .input:focus,
@@ -82,6 +83,28 @@
   color: #ff6b6b;
   font-size: 14px;
   margin-top: 5px;
+}
+
+/* Safari dropdown fix */
+.selectWrapper {
+  position: relative;
+}
+
+.selectWrapper::after {
+  content: "\25BC";
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  pointer-events: none;
+  color: #fff;
+}
+
+.select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  padding-right: 30px;
 }
 
 @media (max-width: 768px) {
