--- a/src/components/EditReviewForm/EditReviewForm.module.css
+++ b/src/components/EditReviewForm/EditReviewForm.module.css
@@ -29,7 +29,7 @@
   background-color: #2b2a28;
   color: #fff;
   font-size: 16px;
-  font-family: inherit; /* This ensures all inputs use the same font */
+  font-family: inherit;
 }
 
 .input:focus,
