--- a/src/pages/MediaReviews/MediaReviews.module.css
+++ b/src/pages/MediaReviews/MediaReviews.module.css
@@ -17,7 +17,7 @@
   align-items: center;
   margin-bottom: 1.5rem;
   flex-wrap: wrap;
-  animation: fadeInLeft 1s ease-out;
+  animation: slideInAnimation 1s ease-out;
 }
 
 .sectionTitle {
@@ -40,14 +40,14 @@
   padding: 0.5rem 0;
 }
 
-@keyframes fadeInLeft {
+@keyframes slideInAnimation {
   from {
     opacity: 0;
-    transform: translateX(-500px);
+    transform: translateY(30px);
   }
   to {
     opacity: 1;
-    transform: translateX(0);
+    transform: translateY(0);
   }
 }
 
