--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,13 @@
   --hover-orange: #b85f3d;
 }
 
+.no-scroll {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
