--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,12 +1,12 @@
 /* src/components/Header/Header.module.css */
 
 .header {
-  background-color: var(--dark-bg);
+  background-color: var(--dark-primary);
   padding: 1rem 0;
   position: sticky;
   top: 0;
   z-index: 1000;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  border-bottom: 3px solid var(--light-primary);
 }
 
 .headerContent {
@@ -24,7 +24,7 @@
 .navLink {
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
-  color: var(--text-color);
+  color: var(--light-primary);
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -40,14 +40,9 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: var(--pale-green);
+  background-color: var(--light-primary);
   transform: scaleX(0);
   transition: transform 0.3s ease;
-}
-
-.navLink:hover,
-.navLink.active {
-  color: var(--pale-green);
 }
 
 .navLink:hover::after,
