--- a/src/components/ImageCard/ImageCard.module.css
+++ b/src/components/ImageCard/ImageCard.module.css
@@ -3,8 +3,8 @@
 .imageCard {
   position: relative;
   overflow: hidden;
-  background-color: var(--dark-bg);
-  border-radius: 8px;
+  background-color: var(--dark-primary);
+  border: 1px solid var(--light-primary);
   cursor: pointer;
 }
 
@@ -20,34 +20,19 @@
 
 .overlay {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-  overflow: hidden;
-  width: 100%;
-  height: 0;
-  transition: 0.5s ease;
+  bottom: 0;
+  background-color: var(--dark-shadow);
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  opacity: 0;
 }
 
 .imageCard:hover .overlay {
-  height: 100%;
-}
-
-.title {
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
+  transition: opacity 0.3s ease;
 }
 
 .date {
