--- a/src/components/LoadingSpinner/LoadingSpinner.module.css
+++ b/src/components/LoadingSpinner/LoadingSpinner.module.css
@@ -4,8 +4,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; /* Changed from calc(100vh - 120px) to 100vh */
-  background-color: #2b2a28;
+  min-height: 100vh;
+  background-color: var(--dark-primary);
 }
 
 .spinnerWrapper {
@@ -18,8 +18,8 @@
 .loadingSpinner {
   width: 50px;
   height: 50px;
-  border: 5px solid #fff;
-  border-top: 5px solid #d97757;
+  border: 5px solid var(--light-primary);
+  border-top: 5px solid var(--accent-color);
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
