--- a/src/components/SortDropdown/SortDropdown.module.css
+++ b/src/components/SortDropdown/SortDropdown.module.css
@@ -10,9 +10,9 @@
 
 .sortButton,
 .orderButton {
-  background-color: var(--accent-orange);
-  color: white;
-  border: none;
+  background-color: var(--dark-primary);
+  color: var(--light-primary);
+  border: 2px solid var(--light-primary);
   padding: 10px 15px;
   font-size: 16px;
   cursor: pointer;
@@ -28,24 +28,47 @@
 
 .sortButton {
   flex-grow: 1;
-  border-radius: 4px 0 0 4px;
+  border-right: 0px;
+  width: 110px;
+  justify-content: left;
+  position: relative; /* Required for the pseudo-element */
+}
+
+.sortButton span {
+  position: relative;
+}
+
+.sortButton span::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -2px; /* Adjust this value to position the underline */
+  left: 0;
+  background-color: var(--light-primary);
+  transform: scaleX(0);
+  transform-origin: center;
+  transition: transform 0.3s ease;
+}
+
+.sortButton:hover span::after {
+  transform: scaleX(1);
 }
 
 .orderButton {
-  border-radius: 0 4px 4px 0;
   padding: 10px;
   flex-shrink: 0;
+  border-left: 0px;
 }
 
-.sortButton:hover,
-.orderButton:hover {
-  background-color: #b85f3d;
+.orderButton:hover svg {
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
 }
 
-.sortButton:focus,
-.orderButton:focus {
-  outline: none;
-  box-shadow: 0 0 0 2px rgba(217, 119, 87, 0.5);
+.orderButton:hover span {
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
 }
 
 .dropdownContent {
@@ -53,16 +76,15 @@
   top: 100%;
   left: 0;
   right: 0;
-  background-color: #31312e;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
+  background-color: var(--dark-primary);
+  border: 2px solid var(--light-primary);
+  border-top: none;
   overflow: hidden;
   z-index: 1000;
-  margin-top: 4px;
 }
 
 .dropdownContent button {
-  color: #fff;
+  color: var(--light-primary);
   padding: 12px 16px;
   text-decoration: none;
   display: flex;
@@ -80,26 +102,28 @@
 
 .dropdownContent button:hover,
 .dropdownContent button:active {
-  background-color: #3e3e3a;
+  background-color: var(--dark-hover);
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
 }
 
-/* Icon styles */
 .sortButton svg,
 .orderButton svg,
 .dropdownContent button svg {
   font-size: 18px;
 }
 
-/* Responsive styles */
 @media (max-width: 768px) {
   .sortButton,
   .orderButton {
     padding: 8px 12px;
     font-size: 14px;
   }
+  .sortDropdownContainer {
+    width: 140px;
+  }
 }
 
-/* Accessibility */
 @media (prefers-reduced-motion: reduce) {
   .sortButton,
   .orderButton,
